@@ -5,6 +5,10 @@ impatient clients.
 
 Fixed bug #740: Handle SRU records referring to xmlns's outside recordData.
 
+Fixed bug #722: Allow Z39.50 Init Options to be specified / retrieved.
+Client code may now interrogate options such as "init_opt_sort" to
+find out whether the server claims to support various options.
+
 --- 2.1.40 2006/11/27
 
 Added utilities yaz_{set,get}_esn to set/get element set name from
